--- a/templates/Shop/shopMail.html.twig
+++ b/templates/Shop/shopMail.html.twig
@@ -1,89 +1,239 @@
-<style type="text/css">
-    body,
-    html,
-    body {
-        background: #f3f3f3 !important;
-    }
-</style>
-<!-- move the above styles into your custom stylesheet -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="icon" href="../../assets/img/icons/foundation-favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation-emails/2.2.1/foundation-emails.min.css"
+          rel="stylesheet">
+    <title>My Order Template Email Template Subject</title>
+</head>
+<body>
+<span class="preheader"></span>
 
-<spacer size="16"></spacer>
 
-<container>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    <spacer size="16"></spacer>
+    ga('create', 'UA-2195009-2', 'auto');
+    ga('send', 'pageview');
 
-    <row>
-        <columns>
-            <h1>Merci pour votre commande.</h1>
-            <p>Retrouvez ci-dessous votre commande ainsi que vos billets</p>
+    ga('create', 'UA-2195009-27', 'auto', {name: "foundation"});
+    ga('foundation.send', 'pageview');
 
-            <spacer size="16"></spacer>
+    ga('create', 'UA-2195009-47', 'auto', {name: "foundation_emails"});
+    ga('foundation_emails.send', 'pageview');
 
-            <callout class="secondary">
-                <row>
-                    <columns large="6">
-                        <p>
-                            <strong>Payment Method</strong><br/>
-                            Stripe
-                        </p>
-                        <p>
-                            <strong>Email Address</strong><br/>
-                            email.order
-                        </p>
-                        <p>
-                            <strong>Order ID</strong><br/>
-                            Ref.order
-                        </p>
-                    </columns>
-                    <columns large="6">
-                        <p>
-                            <strong>Shipping Method</strong><br/>
-                            Boat (1&ndash;2 weeks)<br/>
-                            <strong>Shipping Address</strong><br/>
-                            Captain Price<br/>
-                            123 Maple Rd<br/>
-                            Campbell, CA 95112
-                        </p>
-                    </columns>
-                </row>
-            </callout>
+</script>
+<table class="body">
+    <tr>
+        <td class="center" align="center" valign="top">
+            <center data-parsed="">
+                <style type="text/css" align="center" class="float-center">
+                    body,
+                    html,
+                    .body {
+                        background: #f3f3f3 !important;
+                    }
+                </style>
 
-            <h4>Order Details</h4>
+                <table class="spacer float-center">
+                    <tbody>
+                    <tr>
+                        <td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table align="center" class="container float-center">
+                    <tbody>
+                    <tr>
+                        <td>
+                            <table class="spacer">
+                                <tbody>
+                                <tr>
+                                    <td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <table class="row">
+                                <tbody>
+                                <tr>
+                                    <th class="small-12 large-12 columns first last">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <h1>Thanks for your order.</h1>
+                                                    <p>Thanks for shopping with us! Lorem ipsum dolor sit amet,
+                                                        consectetur adipisicing elit. Ad earum ducimus, non, eveniet
+                                                        neque dolores voluptas architecto sed, voluptatibus aut dolorem
+                                                        odio. Cupiditate a recusandae, illum cum voluptatum modi
+                                                        nostrum.</p>
+                                                    <table class="spacer">
+                                                        <tbody>
+                                                        <tr>
+                                                            <td height="16px" style="font-size:16px;line-height:16px;">
+                                                                &#xA0;
+                                                            </td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                    <table class="callout">
+                                                        <tr>
+                                                            <th class="callout-inner secondary">
+                                                                <table class="row">
+                                                                    <tbody>
+                                                                    <tr>
+                                                                        <th class="small-12 large-6 columns first">
+                                                                            <table>
+                                                                                <tr>
+                                                                                    <th>
+                                                                                        <p>
+                                                                                            <strong>Payment
+                                                                                                Method</strong><br>
+                                                                                            Dubloons
+                                                                                        </p>
+                                                                                        <p>
+                                                                                            <strong>Email
+                                                                                                Address</strong><br>
+                                                                                            thecapn@pirates.org
+                                                                                        </p>
+                                                                                        <p>
+                                                                                            <strong>Order
+                                                                                                ID</strong><br>
+                                                                                            239235983749636
+                                                                                        </p>
+                                                                                    </th>
+                                                                                </tr>
+                                                                            </table>
+                                                                        </th>
+                                                                        <th class="small-12 large-6 columns last">
+                                                                            <table>
+                                                                                <tr>
+                                                                                    <th>
+                                                                                        <p>
+                                                                                            <strong>Shipping
+                                                                                                Method</strong><br>
+                                                                                            Boat (1&ndash;2 weeks)<br>
+                                                                                            <strong>Shipping
+                                                                                                Address</strong><br>
+                                                                                            Captain Price<br>
+                                                                                            123 Maple Rd<br>
+                                                                                            Campbell, CA 95112
+                                                                                        </p>
+                                                                                    </th>
+                                                                                </tr>
+                                                                            </table>
+                                                                        </th>
+                                                                    </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </th>
+                                                            <th class="expander"></th>
+                                                        </tr>
+                                                    </table>
+                                                    <h4>Order Details</h4>
+                                                    <table>
+                                                        <tr>
+                                                            <th>Item</th>
+                                                            <th>#</th>
+                                                            <th>Price</th>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Ship's Cannon</td>
+                                                            <td>2</td>
+                                                            <td>$100</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Ship's Cannon</td>
+                                                            <td>2</td>
+                                                            <td>$100</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Ship's Cannon</td>
+                                                            <td>2</td>
+                                                            <td>$100</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="2"><b>Subtotal:</b></td>
+                                                            <td>$600</td>
+                                                        </tr>
+                                                    </table>
+                                                    <hr>
+                                                    <h4>What's Next?</h4>
+                                                    <p>Our carrier raven will prepare your order for delivery. Lorem
+                                                        ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                                                        necessitatibus itaque debitis laudantium doloribus quasi nostrum
+                                                        distinctio suscipit, magni soluta eius animi voluptatem qui
+                                                        velit eligendi quam praesentium provident culpa?</p>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <table class="row footer text-center">
+                                <tbody>
+                                <tr>
+                                    <th class="small-12 large-3 columns first">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <img src="https://placehold.it/170x30" alt="">
+                                                </th>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <th class="small-12 large-3 columns">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <p>
+                                                        Call us at 800.555.1923<br>
+                                                        Email us at support@discount.boat
+                                                    </p>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                    <th class="small-12 large-3 columns last">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <p>
+                                                        123 Maple Rd<br>
+                                                        Campbell, CA 95112
+                                                    </p>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                    </th>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </center>
+        </td>
+    </tr>
+</table>
 
-            <table>
-                <tr><th>Item</th><th>#</th><th>Price</th></tr>
-                <tr><td>Ship's Cannon</td><td>2</td><td>$100</td></tr>
-                <tr><td>Ship's Cannon</td><td>2</td><td>$100</td></tr>
-                <tr><td>Ship's Cannon</td><td>2</td><td>$100</td></tr>
-                <tr>
-                    <td colspan="2"><b>Subtotal:</b></td>
-                    <td>$600</td>
-                </tr>
-            </table>
-
-            <hr/>
-
-            <h4>What's Next?</h4>
-
-            <p>Our carrier raven will prepare your order for delivery. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi necessitatibus itaque debitis laudantium doloribus quasi nostrum distinctio suscipit, magni soluta eius animi voluptatem qui velit eligendi quam praesentium provident culpa?</p>
-        </columns>
-    </row>
-    <row class="footer text-center">
-        <columns large="3">
-            <img src="http://placehold.it/170x30" alt="">
-        </columns>
-        <columns large="3">
-            <p>
-                Call us at 800.555.1923<br/>
-                Email us at support@discount.boat
-            </p>
-        </columns>
-        <columns large="3">
-            <p>
-                123 Maple Rd<br/>
-                Campbell, CA 95112
-            </p>
-        </columns>
-    </row>
-</container>
+<div style="display:none; white-space:nowrap; font:15px courier; line-height:0;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+</div>
+</body>
+</html>
